# spillemotor

./: Cargo.toml
fonts/source_code_pro/: metadata.json
models/cat/: cat.mtl
models/duck/: Duck0.gltf
models/sponza/: Sponza.gltf
shaders/: cluster.glsl  cluster_build.glsl  cluster_build.spv  cluster_general.glsl  cluster_update.glsl  cluster_update.spv  compile.sh  frag.glsl  frag.spv  light_update.spv  sdf_frag.spv  sdf_vert.glsl  sdf_vert.spv  vert.glsl  vert.spv
src/: camera.rs  core.rs  font_import.rs  gltf_import.rs  handle.rs  light.rs  macros.rs  main.rs  resource.rs  scene.rs  text.rs  util.rs
src/shaders/: cluster_build.glsl  cluster_debug.glsl  cluster_general.glsl  cluster_update.glsl  compile.sh  frag.glsl  light_update.glsl  sdf_frag.glsl
