[package]
name = "spillemotor"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.0"

anyhow = "1.0.57"
log = "0.4.17"
env_logger = "0.9.0"

winit = "0.26.1"
raw-window-handle = "^0.4.2"

glam = "0.20.4"

gltf = "1.0.0"
image = "0.24.2"

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-metal = "0.2.0"
